# nexus-exchange-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  endpoints.txt  release-plz.toml
.github/: CODEOWNERS  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: api-version-sync.yml  ci.yml  release-plz.yml  security.yml  spec-autobump.yml  spec-drift.yml
docs/: spec-autobump-replication.md
examples/: account_balances.rs  bridge_deposit.rs  cancel_order.rs  orderbook_snapshot.rs  place_order.rs  positions.rs  public_endpoints.rs  recent_trades.rs  ws_orderbook.rs  ws_user_events.rs
scripts/: check_spec_drift.py  render_autobump_pr_body.py  sync_api_version.py  test_check_spec_drift.py  update_compat_table.py
src/: auth.rs  client.rs  config.rs  error.rs  lib.rs  markets.rs  ratelimit.rs  rest.rs  types.rs  ws.rs
src/auth/: eth.rs  mod.rs
src/rest/: pagination.rs
src/ws/: backoff.rs  protocol.rs  typed.rs
tests/: account.rs  account_ops.rs  adl.rs  auth.rs  bridge_cod.rs  keys_agents.rs  markets.rs  orders.rs  public.rs  rate_limit.rs  retry.rs  tier3.rs  ws.rs  ws_typed.rs
