[package]
name = "nexus-exchange"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "Official Rust SDK for the Nexus Exchange API (REST + WebSocket)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nexus-xyz/nexus-exchange-rs"
keywords = ["nexus", "exchange", "trading", "crypto"]
categories = ["api-bindings", "asynchronous"]
publish = true

[dependencies]
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
rust_decimal = { version = "1", features = ["serde-with-str", "serde-with-float"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
secrecy = "0.10"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
