[package]
name = "nexus-exchange"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "Official Rust SDK for the Nexus Exchange API (REST + WebSocket)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nexus-xyz/nexus-exchange-rs"
keywords = ["nexus", "exchange", "trading", "crypto"]
categories = ["api-bindings", "asynchronous"]
publish = false # flip to true when release tooling lands (see SDK release issue)

[dependencies]
backon = "~1.5" # 1.6 bumps MSRV to 1.85; stay on 1.5.x for rust-version = 1.82
bytes = "1" # re-exported by reqwest; lets response bodies pass through without a copy
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1", features = ["serde-with-str", "serde-with-float"] }
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
